# dala

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  dala.jsonc  install.ps1  install.sh  migrate-config.sh  mix.exs  package-lock.json  package.json  uninstall.ps1  update.ps1  update.sh
.github/workflows/: client-check.yml  client-release.yml  release.yml  test.yml
assets/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
assets/css/: app.css
assets/js/: app.js  ash_rpc.ts  ash_typed_channels.ts  ash_types.ts  index.tsx  theme.js
ci/: unix-release-smoke.sh  windows-atomic-replace-smoke.ps1  windows-release-smoke.ps1
clients/desktop/: .gitignore  crash-recovery.js  main.js  menu-locales.js  package-lock.json  package.json  preload.js  updater.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: config-migration.md  mcp.md  windows-agent-certification.md  需求.md
e2e/: README.md  composer.spec.js  customTheme.spec.js  files.spec.js  grammar.spec.js  helpers.js  leader.spec.js  mcp.spec.js  mobile.spec.js  package-lock.json  package.json  playwright.config.js  session.spec.js  settings.spec.js  sidebar.spec.js  start-server.sh  terminalPerformance.spec.js  theme.spec.js  voice.spec.js
lib/: dala.ex  dala_web.ex
native/dala_git/: Cargo.toml
native/dala_git/src/: lib.rs
native/dala_holder/: Cargo.toml
native/dala_holder/src/: main.rs  screen.rs  task_launcher.rs  watch.rs
native/dala_holder/tests/: holder_windows.rs  task_launcher_windows.rs  watch.rs
test/: test_helper.exs
(+462 files in other folders)
