[package]
name = "dala_git"
version = "0.1.0"
edition = "2021"

[lib]
name = "dala_git"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.38"
# Local repository operations only — no network transport, so drop the
# default https/ssh features (and their openssl dependency).
git2 = { version = "0.20", default-features = false }
