[package]
name = "dala_holder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dala_holder"
path = "src/main.rs"

[[bin]]
name = "dala_task_launcher"
path = "src/task_launcher.rs"

[dependencies]
notify = "8"
portable-pty = "0.9"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alacritty_terminal = "0.26"

[target.'cfg(windows)'.dependencies]
fs2 = "0.4"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }

[profile.release]
strip = true
